z-index fix

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -138,7 +138,7 @@ article
 
     position: fixed;
     font-size: 5em;
-    z-index: 2;
+    z-index: 1;
     width: 100%;
     text-align: center;
     bottom: 17px;
